WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
95135
[BlackBerry] Range boundaries should use endOfBlock instead of endOfLine
https://bugs.webkit.org/show_bug.cgi?id=95135
Summary
[BlackBerry] Range boundaries should use endOfBlock instead of endOfLine
Nima Ghanavatian
Reported
2012-08-27 15:20:42 PDT
The original implementation used nextLinePosition to iterate through the field from the start of each line, and was bounded in comparison to the endOfLine. This works fine as long as there aren't any empty lines between paragraphs of text, since these will have startOfLine == endOfLine and break out. Using isEndOfBlock() ensures that we scan through the entire field properly. Also, in debugging this issue I noticed some liberties being taken in the usage of the map from sequence to transaction id and the Range pointer retrieved from the focused field. Added checks for the pointer and a mutex for the map to ensure a valid state before use.
Attachments
Patch
(7.41 KB, patch)
2012-08-28 07:29 PDT
,
Nima Ghanavatian
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Nima Ghanavatian
Comment 1
2012-08-28 07:29:13 PDT
Created
attachment 160971
[details]
Patch
WebKit Review Bot
Comment 2
2012-08-28 08:46:00 PDT
Comment on
attachment 160971
[details]
Patch Clearing flags on attachment: 160971 Committed
r126883
: <
http://trac.webkit.org/changeset/126883
>
WebKit Review Bot
Comment 3
2012-08-28 08:46:03 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug