[BlackBerry] Range boundaries should use endOfBlock instead of endOfLine. https://bugs.webkit.org/show_bug.cgi?id=95135

The original implementation used nextLinePosition to iterate
through the field from the start of each line, and was bounded in
comparison to the endOfLine. This works fine as long as there aren't any
empty lines between paragraphs of text, since these will have
startOfLine == endOfLine and break out.

Also, protect map access with a mutex in case we get a response
before updating the map. Further, we should check the Range pointer
before using it, since its not guaranteed to be valid.

Internally reviewed by Mike Fenton.

Patch by Nima Ghanavatian <nghanavatian@rim.com> on 2012-08-28
Reviewed by Antonio Gomes.

* WebKitSupport/InputHandler.cpp:
(BlackBerry::WebKit::InputHandler::spellCheckBlock):

Canonical link: https://commits.webkit.org/113060@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@126883 268f45cc-cd09-0410-ab3c-d52691b4dbfc