Source/WebKit/blackberry/WebKitSupport/InputHandler.cpp
@@ -135,6 +135,7 @@ InputHandler::InputHandler(WebPagePrivate* page)
     , m_pendingKeyboardVisibilityChange(NoChange)
     , m_delayKeyboardVisibilityChange(false)
 {
+    pthread_mutex_init(&m_sequenceMapMutex, 0);
 }
 
 InputHandler::~InputHandler()
@@ -581,6 +582,7 @@ void InputHandler::requestCheckingOfString(PassRefPtr<WebCore::TextCheckingReque
         return;
     }
 
+    BlackBerry::Platform::MutexLocker lock(&m_sequenceMapMutex);
     int32_t transactionId = m_webPage->m_client->checkSpellingOfStringAsync(checkingString, paragraphLength);
     free(checkingString);
 
@@ -598,6 +600,7 @@ void InputHandler::requestCheckingOfString(PassRefPtr<WebCore::TextCheckingReque
 
 int32_t InputHandler::convertTransactionIdToSequenceId(int32_t transactionId)
 {
+    BlackBerry::Platform::MutexLocker lock(&m_sequenceMapMutex);
     std::map<int32_t, int32_t>::iterator it = m_sequenceMap.find(transactionId);
 
     if (it == m_sequenceMap.end())
@@ -660,6 +663,7 @@ void InputHandler::spellCheckingRequestProcessed(int32_t transactionId, spannabl
 
 void InputHandler::cancelAllSpellCheckingRequests()
 {
+    BlackBerry::Platform::MutexLocker lock(&m_sequenceMapMutex);
     for (std::map<int32_t, int32_t>::iterator it = m_sequenceMap.begin(); it != m_sequenceMap.end(); ++it)
         spellCheckingRequestCancelled(it->second, true /* isSequenceId */);
     m_sequenceMap.clear();
@@ -672,7 +676,7 @@ void InputHandler::spellCheckingRequestCancelled(int32_t id, bool isSequenceId)
 
     int32_t sequenceId = isSequenceId ? id : convertTransactionIdToSequenceId(id);
     SpellChecker* spellChecker = getSpellChecker();
-    if (!spellChecker) {
+    if (!spellChecker || !sequenceId) {
         SpellingLog(LogLevelWarn, "InputHandler::spellCheckingRequestCancelled failed to cancel the request with sequenceId %d", sequenceId);
         return;
     }
@@ -856,13 +860,15 @@ void InputHandler::spellCheckBlock(VisibleSelection& visibleSelection, TextCheck
     if (!isActiveTextEdit())
         return;
 
+    RefPtr<Range> rangeForSpellChecking = visibleSelection.toNormalizedRange();
+    if (!rangeForSpellChecking || !rangeForSpellChecking->text() || !rangeForSpellChecking->text().length())
+        return;
+
     SpellChecker* spellChecker = getSpellChecker();
     if (!spellChecker) {
         SpellingLog(LogLevelInfo, "InputHandler::spellCheckBlock Failed to spellcheck the current focused element.");
         return;
     }
-
-    RefPtr<Range> rangeForSpellChecking = visibleSelection.toNormalizedRange();
 
     // If we have a batch request, try to send off the entire block.
     if (textCheckingProcessType == TextCheckingProcessBatch) {
@@ -876,13 +882,16 @@ void InputHandler::spellCheckBlock(VisibleSelection& visibleSelection, TextCheck
     // Since we couldn't check the entire block at once, set up starting and ending markers to fire incrementally.
     VisiblePosition startPos = visibleSelection.visibleStart();
     VisiblePosition startOfCurrentLine = startOfLine(startPos);
-    VisiblePosition endOfCurrentLine = endOfLine(startPos);
+    VisiblePosition endOfCurrentLine = endOfLine(startOfCurrentLine);
 
-    while (startOfCurrentLine != endOfCurrentLine) {
+    while (!isEndOfBlock(startOfCurrentLine)) {
         // Create a selection with the start and end points of the line, and convert to Range to create a SpellCheckRequest.
         rangeForSpellChecking = VisibleSelection(startOfCurrentLine, endOfCurrentLine).toNormalizedRange();
 
-        if (rangeForSpellChecking->text().length() >= MaxSpellCheckingStringLength) {
+        if (rangeForSpellChecking->text().length() < MaxSpellCheckingStringLength) {
+            startOfCurrentLine = nextLinePosition(startOfCurrentLine, startOfCurrentLine.lineDirectionPointForBlockDirectionNavigation());
+            endOfCurrentLine = endOfLine(startOfCurrentLine);
+        } else {
             // Iterate through words from the start of the line to the end.
             rangeForSpellChecking = getRangeForSpellCheckWithFineGranularity(startOfCurrentLine, endOfCurrentLine);
             if (!rangeForSpellChecking) {
@@ -890,12 +899,6 @@ void InputHandler::spellCheckBlock(VisibleSelection& visibleSelection, TextCheck
                 return;
             }
             startOfCurrentLine = VisiblePosition(rangeForSpellChecking->endPosition());
-        } else {
-            startOfCurrentLine = nextLinePosition(startOfCurrentLine, startOfCurrentLine.lineDirectionPointForBlockDirectionNavigation());
-            endOfCurrentLine = endOfLine(startOfCurrentLine);
-            // If we are at the last line, nextLinePosition will return the position at the end of the line. If we're not at the end, wrap with a call to startOfLine to be safe.
-            if (startOfCurrentLine != endOfCurrentLine)
-                startOfCurrentLine = startOfLine(startOfCurrentLine);
         }
 
         SpellingLog(LogLevelInfo, "InputHandler::spellCheckBlock Substring text is '%s', of size %d", rangeForSpellChecking->text().latin1().data(), rangeForSpellChecking->text().length());
