Source/WebKit/blackberry/WebKitSupport/InputHandler.h
@@ -26,6 +26,7 @@
 #include <imf/events.h>
 #include <imf/input_data.h>
 #include <map>
+#include <pthread.h>
 #include <wtf/RefPtr.h>
 
 namespace WTF {
@@ -217,6 +218,7 @@ private:
     bool m_delayKeyboardVisibilityChange;
 
     std::map<int32_t, int32_t> m_sequenceMap;
+    pthread_mutex_t m_sequenceMapMutex;
 };
 
 }
